[package]
name = "bdevux-assets"
version = "0.1.0"
authors = ["Koichi Matsuda <k-matsuda@caldia.org>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dev-dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.runtime-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dev-dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.parity-codec-derive]
default-features = false
version = '3.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'rstd/std',
    # 'runtime-io/std',
    'support/std',
    # 'primitives/std',
    'system/std',
    "parity-codec-derive/std",
]
