[package]
name = "bdevux-assets"
version = "0.1.0"
authors = ["Koichi Matsuda <k-matsuda@caldia.org>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dev-dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
tag = "v1.0.0rc1"

[dependencies.runtime-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
tag = "v1.0.0rc1"

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
tag = "v1.0.0rc1"

[dev-dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
tag = "v1.0.0rc1"

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
tag = "v1.0.0rc1"

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
tag = "v1.0.0rc1"

[dependencies.parity-codec-derive]
default-features = false
version = '3.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'rstd/std',
    # 'runtime-io/std',
    'support/std',
    # 'primitives/std',
    'system/std',
    "parity-codec-derive/std",
]
